# wane-vault

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitmodules  Anchor.toml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.ko.md  README.md  ROADMAP.md  SECURITY.md  foundry.toml  generate_history.py
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
crates/ivza-cli/: Cargo.toml
crates/ivza-cli/src/: config.rs  main.rs
crates/ivza-cli/src/commands/: analyze.rs  config_cmd.rs  mod.rs  solve.rs  status.rs  submit.rs
crates/ivza-core/: Cargo.toml
crates/ivza-core/src/: lib.rs
crates/ivza-core/src/analyzer/: critical_path.rs  dependency.rs  mod.rs  parallelism.rs
crates/ivza-core/src/graph/: builder.rs  decomposer.rs  edge.rs  mod.rs  node.rs
crates/ivza-core/src/intent/: mod.rs  parser.rs  resolver.rs
crates/ivza-core/src/scheduler/: executor.rs  lane.rs  mod.rs  priority.rs
crates/ivza-core/src/types/: account.rs  transaction.rs
crates/ivza-solver/: Cargo.toml
crates/ivza-solver/src/: lib.rs  optimizer.rs  pool.rs  router.rs  solver.rs
docs/: api-reference.md  architecture.md  cast-recipes.md  comparison.md  contracts.md  deployments.md  development.md  faq.md  gas.md  getting-started.md  glossary.md  integration-guide.md  reason-codes.md  sdk.md  security-notes.md  threat-model.md
examples/: README.md  create-and-send.ts  dry-run.ts  screened-token-send.ts
programs/ivza-engine/: Cargo.toml
programs/ivza-engine/src/: errors.rs  events.rs  lib.rs  state.rs
programs/ivza-engine/src/instructions/: execute.rs  initialize.rs  mod.rs  resolve.rs  submit_graph.rs
script/: DeployVaultFactory.s.sol  README.md  SessionDemo.s.sol
scripts/: build.sh  deploy.sh  test.sh
sdk/: README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
sdk/src/: abi.ts  client.ts  constants.ts  errors.ts  index.ts
sdk/src/executor/: bundle.ts  index.ts  parallel.ts
sdk/src/graph/: builder.ts  index.ts  node.ts  types.ts
sdk/src/intent/: index.ts  parser.ts  types.ts
sdk/src/types/: account.ts  index.ts  transaction.ts
sdk/src/utils/: connection.ts  index.ts  serialization.ts
src/: IWanePolicy.sol  README.md  WanePolicy.sol  WaneRegistry.sol  WaneToken.sol  WaneTypes.sol  WaneVault.sol  WaneVaultFactory.sol
test/: README.md  WaneVault.t.sol
tests/core/: analyzer_test.rs  graph_test.rs  intent_test.rs  scheduler_test.rs  solver_test.rs
tests/sdk/: client.test.ts  graph.test.ts
