[workspace]
resolver = "2"
members = [
    "crates/ivza-core",
    "crates/ivza-solver",
    "crates/ivza-cli",
    "programs/ivza-engine",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ivza-protocol/ivza"

[workspace.dependencies]
ivza-core = { path = "crates/ivza-core" }
ivza-solver = { path = "crates/ivza-solver" }
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-sdk = "1.18"
solana-client = "1.18"
solana-program = "1.18"
spl-token = "4.0"
spl-associated-token-account = "3.0"
borsh = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"