[package]
name = "ivza-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for interacting with IVZA execution layer"

[[bin]]
name = "ivza"
path = "src/main.rs"

[dependencies]
ivza-core = { workspace = true }
ivza-solver = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bs58 = { workspace = true }
