[package]
name = "ivza-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for iVZA parallel transaction execution engine"

[dependencies]
solana-sdk = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
petgraph = { workspace = true }
tokio = { workspace = true }
