[package]
name = "ivza-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for IVZA parallel transaction execution engine"

[dependencies]
solana-sdk = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
petgraph = { workspace = true }
dashmap = { workspace = true }
crossbeam-channel = { workspace = true }
rayon = { workspace = true }
sha2 = { workspace = true }
bs58 = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
