[package]
name = "ivza-solver"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Solver and route optimizer for IVZA parallel execution engine"

[dependencies]
ivza-core = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
bs58 = { workspace = true }
